<resources>
    <string name="app_name">MediCalli</string>
    <string name="iniciar_sesion_aqui"><u>Regístrate aquí</u></string>
    <string name="inicie_sesi_n_aqu"><u>Inicie sesión aquí</u></string>
    <string name="la_contrase_a_debe_incluir_al_menos_8_caracteres_y_1_n_mero"><i>La contraseña debe incluir al menos 8 caracteres y 1 número</i></string>
    <string name="fab_content_desc">fabDesc</string>
    <string name="olvidaste_tu_contrase_a"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="logoImage">logoImage</string>
    <string name="backgroundImage1">bgImage1</string>
    <string name="backgroundImage2">bgImage2</string>
    <string name="content_description_media">sample</string>
    <string name="title">"Morbi iaculis odio sit amet eros commodo maximus."</string>
    <string name="secondary_text">Duis nec leo ac ligula blandit pretium eu ut tellus.</string>
    <string name="supporting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla commodo lacus quis ligula fringilla consectetur. Curabitur et justo nulla. Nam ac ullamcorper odio. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ultricies posuere sem condimentum ornare. Morbi facilisis sit amet ligula id aliquet. In rutrum eleifend mi nec laoreet. Morbi dapibus eros et velit tempor tempor. Fusce congue, libero non finibus dictum, leo odio pulvinar magna, id euismod justo augue vitae ligula.</string>
    <string name="action_1">Acción 1</string>
    <string name="action_2">Acción 2</string>
    <string name="encontremos_tus_plantas_preferidas">Encuentra Tus Plantas Medicinales!</string>
    <string name="plantas_de_interior">Plantas para Dolor Estomacal</string>
    <string name="conoce_la_variedad_de_plantas_que_puedes_tener_dentro_en_casa">Conoce la variedad de plantas medicinales para el dolor estomacal</string>
    <string name="ver_plantas">Ver Plantas</string>
    <string name="plantas_de_exterior">Plantas para tos y infeccion respiratoria</string>
    <string name="descubre_las_plantas_que_puedes_tener_en_tu_jard_n">Descubre las plantas que te pueden servir para la tos</string>
    <string name="plantas_de_temporada">Dolor de cabeza</string>
    <string name="las_plantas_por_fecha_y_epoca_del_a_o">Descubre las plantas para el dolor cabeza</string>
    <string name="flores">Dolor Muscular</string>
    <string name="encuentra_todas_tus_flores_favoritas_y_las_m_s_llamativas">Encuentra todas tus plantas medicinales para el dolor muscular</string>
    <string name="ver_flores">Ver plantas</string>
    <string name="search_hint">Buscar Plantas</string>
    <string name="ver_blog">Ver Blog</string>
    <string name="errorCaracter">Mínimo 8 caracteres</string>
    <string name="errorNum">Mínimo un número</string>
    <string name="errorIntern">Ocurrió un error intente nuevamente</string>
    <string name="errorMail">Ingresa un correo válido</string>
    <string name="errorPass">Contraseña no encontrada</string>
    <string name="errorName">Ingresa un nombre válido</string>
    <string name="errorPassDiff">La contraseña no coincide</string>

    <style name="TextAppearance.MdcTypographyStyles.Headline1" parent="TextAppearance.MaterialComponents.Headline1">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">99sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Headline2" parent="TextAppearance.MaterialComponents.Headline2">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">62sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Headline3" parent="TextAppearance.MaterialComponents.Headline3">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">49sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Headline4" parent="TextAppearance.MaterialComponents.Headline4">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">35sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">25sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">21sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">16sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">14sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Body1" parent="TextAppearance.MaterialComponents.Body1">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">16sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Body2" parent="TextAppearance.MaterialComponents.Body2">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">14sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Button" parent="TextAppearance.MaterialComponents.Button">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">14sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Caption" parent="TextAppearance.MaterialComponents.Caption">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">12sp</item>
    </style>

    <style name="TextAppearance.MdcTypographyStyles.Overline" parent="TextAppearance.MaterialComponents.Overline">
        <item name="fontFamily">@font/overpass</item>
        <item name="android:fontFamily">@font/overpass</item>
        <item name="android:textSize">10sp</item>
    </style>
</resources>
