<?xml version="1.0" encoding="utf-8"?>
<!--
Nombre del Proyecto: Menta
Desarrollador: David Butrón
Perfil de Github: https://github.com/DaveDeveloper117/
Diseñadore UI/UX: Valam Matías https://github.com/OmniSk8
Diseñadore UI/UX: Marco Malagon https://github.com/SpartanTerra69
Perfil de Github: https://github.com/OmniSk8/
Licencia: https://github.com/DaveDeveloper117/Menta/blob/master/LICENSE
URL del Repositorio: https://github.com/DaveDeveloper117/Menta.git
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:alpha="0.9"
        android:contentDescription="@string/backgroundImage1"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo" />

    <ImageView
        android:id="@+id/bgLeftImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/backgroundImage1"
        android:cropToPadding="true"
        android:rotationY="-180"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/plant_top_right" />

    <ImageView
        android:id="@+id/bgRightImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:rotation="180"
        android:rotationY="180"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plant_top_right"
        android:contentDescription="@string/backgroundImage2" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="150dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logoImage"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/descTextView"
        style="@style/TextAppearance.MdcTypographyStyles.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenido a MediCalli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TextAppearance.MdcTypographyStyles.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inicie sesión para continuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTextView"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="Correo electrónico"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:startIconDrawable="@drawable/ic_outline_email_24"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="Contraseña"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTextField"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_outline_lock_24"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassTextView"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/olvidaste_tu_contrase_a"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextField"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

    <TextView
        android:id="@+id/errorFieldTextView"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.App.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Iniciar sesión"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextField"
        app:layout_constraintStart_toStartOf="@+id/passwordTextField"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassTextView"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/newAccTextView"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="¿Aún no tienes una cuenta?, "
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/googleFab"
        tools:ignore="HardcodedText" />


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/rightMaterialDivider2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/suppTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/suppTextView"
        app:layout_constraintTop_toTopOf="@+id/suppTextView"
        app:dividerThickness="2dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/leftMaterialDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/suppTextView"
        app:layout_constraintEnd_toStartOf="@+id/suppTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/suppTextView"
        app:dividerThickness="2dp"/>

    <TextView
        android:id="@+id/suppTextView"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="O inicie sesión con"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/registerTextView"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/iniciar_sesion_aqui"
        app:layout_constraintEnd_toEndOf="@+id/newAccTextView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/newAccTextView"
        app:layout_constraintTop_toBottomOf="@+id/newAccTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/googleFab"
        style="@style/Widget.App.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_content_desc"
        app:layout_constraintEnd_toEndOf="@+id/suppTextView"
        app:layout_constraintStart_toStartOf="@+id/suppTextView"
        app:layout_constraintTop_toBottomOf="@+id/suppTextView"
        app:srcCompat="@drawable/ic_google"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/facebookFab"
        style="@style/Widget.App.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_content_desc"
        app:layout_constraintBottom_toBottomOf="@+id/googleFab"
        app:layout_constraintEnd_toStartOf="@+id/googleFab"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/googleFab"
        app:srcCompat="@drawable/ic_facebook" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/appleFab"
        style="@style/Widget.App.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_content_desc"
        app:layout_constraintBottom_toBottomOf="@+id/googleFab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/googleFab"
        app:layout_constraintTop_toTopOf="@+id/googleFab"
        app:srcCompat="@drawable/ic_apple" />

</androidx.constraintlayout.widget.ConstraintLayout>